Added HTML Template and Theme

--- a/theme.yaml
+++ b/theme.yaml
@@ -4,16 +4,16 @@ attrs:
         border_fill_color: '#2F2F2F'
         outline_line_color: '#444444'
     Axis:
-        axis_line_color: "white"
-        axis_label_text_color: "white"
-        major_label_text_color: "white"
-        major_tick_line_color: "white"
-        minor_tick_line_color: "white"
-        minor_tick_line_color: "white"
+        axis_line_color: "gray"
+        axis_label_text_color: "gray"
+        major_label_text_color: "gray"
+        major_tick_line_color: "gray"
+        minor_tick_line_color: "gray"
+        minor_tick_line_color: "gray"
     Grid:
         grid_line_dash: [6, 4]
         grid_line_alpha: .3
     Title:
-        text_color: "white"
+        text_color: "gray"
 
 
